# torch_cmake_example

./: CMakeLists.txt  LICENSE  README.md  src.cpp  test.py
